--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "phpstan/phpstan-deprecation-rules": "^0.11.2",
         "phpstan/phpstan-phpunit": "^0.11.2",
         "phpunit/phpunit": "^8.4.1",
-        "symfony/phpunit-bridge": "^5.1.4"
+        "symfony/phpunit-bridge": "^5.1.4",
+        "lemberg/draft-environment": "^3.3.0"
     },
     "require": {
         "composer/installers": "^1.9",
@@ -29,7 +30,6 @@
         "drupal/core-recommended": "^9.1",
         "drupal/price_difference_formatter": "^1.2",
         "drush/drush": "^10.2",
-        "lemberg/draft-environment": "^3.3.0",
         "zaporylie/composer-drupal-optimizations": "^1.1"
     },
     "repositories": [
