--- a/vm-settings.yml
+++ b/vm-settings.yml
@@ -309,8 +309,8 @@ php_extensions_configuration:
   opcache:
     opcache.error_log: /var/log/draft/php_opcache_error.log
   xdebug:
-    xdebug.mode: 'off'
-    xdebug.discover_client_host: false
+    xdebug.mode: 'debug'
+    xdebug.discover_client_host: true
     xdebug.remote_log: /var/log/draft/php_xdebug_remote.log
 
 # Web server daemon to restart (defaults to Apache 2).
