--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         "drupal/drupal-extension": "^4",
         "drupal/stage_file_proxy": "^1.0@beta",
         "eiriksm/site-schema": "dev-master",
+        "lemberg/draft-environment": "^3.3.0",
         "mglaman/phpstan-drupal": "^0.11.10",
         "phpstan/phpstan-deprecation-rules": "^0.11.2",
         "phpstan/phpstan-phpunit": "^0.11.2",
         "phpunit/phpunit": "^8.4.1",
-        "symfony/phpunit-bridge": "^5.1.4",
-        "lemberg/draft-environment": "^3.3.0"
+        "symfony/phpunit-bridge": "^5.1.4"
     },
     "require": {
         "composer/installers": "^1.9",
@@ -63,7 +63,8 @@
         ]
     },
     "config": {
-        "bin-dir": "bin",
+        "bin-dir": "vendor/bin",
+        "vendor-dir": "vendor",
         "sort-packages": true,
         "discard-changes": true,
         "platform": {
