--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
         run: composer update --no-progress --prefer-dist --optimize-autoloader ${{ matrix.prefer-lowest }}
 
       - name: Coding standards
-        run: vendor/bin/phpcs
+        run: vendor/bin/phpcs -np
 
       - name: Static Code Analysis
         run: vendor/bin/phpstan analyse
