--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,10 @@
         "mglaman/phpstan-drupal": "^0.11.10",
         "phpstan/phpstan-deprecation-rules": "^0.11.2",
         "phpstan/phpstan-phpunit": "^0.11.2",
-        "phpunit/phpunit": "^8.4.1",
         "symfony/phpunit-bridge": "^5.1.4"
     },
     "require": {
-        "composer/installers": "^2.0",
+        "composer/installers": "^1.0",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.0",
         "drupal/commerce": "^2.21",
@@ -29,8 +28,7 @@
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
         "drupal/price_difference_formatter": "^1.2",
-        "drush/drush": "^10.2",
-        "zaporylie/composer-drupal-optimizations": "^1.1"
+        "drush/drush": "^10.2"
     },
     "repositories": [
         {
