--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,14 +1,14 @@
 parameters:
-    level: 1
-    paths:
+   level: 1
+   paths:
         - docroot/modules/custom
-    scanFiles:
+   scanFiles:
         - %currentWorkingDirectory%/drupal/core/tests/Drupal/Tests/PhpunitCompatibilityTrait.php
-  	excludePaths:
-  		  - *Test.php
-  		  - *TestBase.php
-    drupal:
-        drupal_root: docroot
+	excludePaths:
+		- '*.Test.php'
+		- '*/TestBase.php'
+	drupal:
+		drupal_root: docroot
 includes:
 	    - vendor/phpstan/phpstan-phpunit/extension.neon
 	    - vendor/mglaman/phpstan-drupal/extension.neon
