Remove unused types

--- a/config/default/core.entity_form_display.commerce_order_item.default.default.yml
+++ b/config/default/core.entity_form_display.commerce_order_item.default.default.yml
@@ -42,6 +42,7 @@ content:
       require_confirmation: true
     third_party_settings: {  }
 hidden:
+  adjustments: true
   created: true
   status: true
   uid: true
