--- a/config/default/commerce_product.commerce_product_type.default.yml
+++ b/config/default/commerce_product.commerce_product_type.default.yml
@@ -10,5 +10,5 @@ traits: {  }
 locked: false
 description: ''
 variationType: default
-multipleVariations: true
-injectVariationFields: true
+multipleVariations: false
+injectVariationFields: false
