--- a/config/default/commerce_order.commerce_order_type.default.yml
+++ b/config/default/commerce_order.commerce_order_type.default.yml
@@ -12,7 +12,7 @@ third_party_settings:
     cart_form_view: commerce_cart_form
     cart_expiration: {  }
   commerce_checkout:
-    checkout_flow: default
+    checkout_flow: shipping
   commerce_shipping:
     shipment_type: default
 _core:
