--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -32,12 +32,12 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
-  draft_content: 0
   dynamic_page_cache: 0
   editor: 0
   entity: 0
   entity_reference_revisions: 0
   field: 0
+  field_group: 0
   field_ui: 0
   file: 0
   filter: 0
