--- a/config/default/views.view.commerce_cart_form.yml
+++ b/config/default/views.view.commerce_cart_form.yml
@@ -78,7 +78,7 @@ display:
           click_sort_column: target_id
           type: entity_reference_entity_view
           settings:
-            view_mode: summary
+            view_mode: cart
           group_column: target_id
           group_columns: {  }
           group_rows: true
@@ -206,56 +206,6 @@ display:
           empty_zero: false
           hide_alter_empty: true
           allow_decimal: false
-        remove_button:
-          id: remove_button
-          table: commerce_order_item
-          field: remove_button
-          relationship: order_items
-          group_type: group
-          admin_label: ''
-          entity_type: commerce_order_item
-          plugin_id: commerce_order_item_remove_button
-          label: Remove
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
         total_price__number:
           id: total_price__number
           table: commerce_order_item
@@ -322,6 +272,56 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        remove_button:
+          id: remove_button
+          table: commerce_order_item
+          field: remove_button
+          relationship: order_items
+          group_type: group
+          admin_label: ''
+          entity_type: commerce_order_item
+          plugin_id: commerce_order_item_remove_button
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: X
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
       pager:
         type: none
         options:
