Update Drupal core

--- a/config/default/commerce_product.commerce_product_type.default.yml
+++ b/config/default/commerce_product.commerce_product_type.default.yml
@@ -10,5 +10,6 @@ traits: {  }
 locked: false
 description: ''
 variationType: default
+variationTypes: {  }
 multipleVariations: false
 injectVariationFields: false
