--- a/vm-settings.yml
+++ b/vm-settings.yml
@@ -7,10 +7,18 @@
 
 # DO NOT MODIFY THESE SETTINGS MANUALLY.
 draft:
-  last_applied_update: 0
+  last_applied_update: 12
 
 # Vagrant configuration.
 vagrant:
+  # Before we start: auto-install recommended plugins. Code borrowed here:
+  # https://github.com/hashicorp/vagrant/issues/8055#issuecomment-403171757
+  plugins:
+    - vagrant-hostmanager
+    - vagrant-disksize
+    # On Windows hosts additionally install Vagrant WinNFSd. This plugin won't
+    # be installed on non-Windows hosts.
+    - vagrant-winnfsd
   # Box to use. At the moment Debian-based distributions are supported only.
   # Do not change this value, unless absolutely necessary. Valid use case is
   # 32-bit host machine and no support for virtualization of 64-bit guest
@@ -27,7 +35,7 @@ vagrant:
   # Host aliases. Will be added to hosts file alongside <hostname>.test.
   host_aliases: []
   # Source directory. No trailing slash!
-  source_directory: '.'
+  source_directory: .
   # Destination directory. No trailing slash!
   destination_directory: /var/www/draft
   # Synced folder options. Refer to https://www.vagrantup.com/docs/synced-folders/
@@ -37,6 +45,8 @@ vagrant:
     id: default
     type: nfs
     create: true
+    # Disable UDP protocol for NFS, see https://discourse.ubuntu.com/t/jammy-jellyfish-release-notes/24668
+    nfs_udp: false
 
 # VirtualBox configuration.
 #
@@ -73,6 +83,8 @@ virtualbox:
   # VirtualBox disk size (added by vagrant-disksize plugin).
   # See https://github.com/sprotheroe/vagrant-disksize
   disk_size: 40GB
+  # Checking for Guest Additions.
+  check_guest_additions: false
 
 # Ansible local configuration.
 ansible:
@@ -108,13 +120,14 @@ draft_features:
 
 ssh_default_directory: '{{ vagrant.destination_directory }}'
 
-# Role: oefenweb.swapfile @ v2.0.34
+# Role: oefenweb.swapfile @ v2.0.35
 
 # Set swap file size.
 swapfile_size: 2GB
 
-# Role: geerlingguy.mailhog @ 2.2.0
+# Role: geerlingguy.mailhog @ 2.3.0
 
+mailhog_arch: '{{ ''arm'' if ansible_architecture == ''aarch64'' else ''amd64'' }}'
 mailhog_install_dir: /opt/mailhog
 mailhog_version: 1.0.0
 mailhog_binary_url: 'https://github.com/mailhog/MailHog/releases/download/v{{ mailhog_version }}/MailHog_linux_amd64'
@@ -132,7 +145,7 @@ apache2_document_root: docroot
 # Log level to use
 apache2_log_level: error
 
-# Role: geerlingguy.mysql @ 3.3.2
+# Role: geerlingguy.mysql @ 3.5.0
 
 # Set this to the user ansible is logging in as - should have root
 # or sudo access
@@ -253,6 +266,8 @@ mysql_users:
     priv: 'drupal.*:ALL'
     host: '%'
 
+mysql_disable_log_bin: false
+
 # Replication settings (replication is only enabled if master/user have values).
 mysql_server_id: '1'
 mysql_max_binlog_size: 100M
@@ -263,9 +278,9 @@ mysql_replication_master: ''
 # Same keys as `mysql_users` above.
 mysql_replication_user: []
 
-# Role: t2l.php @ 1.5.0
+# Role: t2l.php @ 1.6.1
 
-# PHP version to install. Possible values: 5.6, 7.0 - 7.4, and 8.0
+# PHP version to install. Possible values: 5.6, 7.0 - 7.4, and 8.0 - 8.1
 php_version: '8.0'
 
 # Configure PHP.
@@ -330,7 +345,7 @@ composer_install_dir: /usr/local/bin
 composer_filename: composer
 
 # Composer version.
-composer_version:
+composer_version: ~
 
 # Keep Composer up-to-date.
 composer_keep_updated: true
